--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,4 @@ todo
 check if nn-hsv tops all
 update tables, ttest fig based on the results
 check abstract/discussion against updated table/fig
+refer raca
